changed lib folder to be compatible with harp dir layout

--- a/_harp/bower.json
+++ b/_harp/bower.json
@@ -14,7 +14,8 @@
     "node_modules",
     "_components",
     "test",
-    "tests"
+    "tests",
+    "**/*.less"    
   ],
   "dependencies": {
     "font-awesome": "~4.4.0",
